subscribed courses in profile and layout fixes

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,10 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/topPanel"
             android:background="#E6FFFFFF"
-            android:padding="20dp">
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="5dp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/email"
@@ -109,6 +112,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:gravity="center">
 
                     <TextView
@@ -137,7 +141,6 @@
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
             android:visibility="gone" />
 
