--- a/app/src/main/res/layout/content_custom_course.xml
+++ b/app/src/main/res/layout/content_custom_course.xml
@@ -20,8 +20,8 @@
             fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:text="@string/course"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_small" />
@@ -117,8 +117,10 @@
             fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
             android:onClick="createCourse"
             android:text="@string/save"
             android:textAllCaps="true"
