--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="default_tv_color">#515151</color>
     <color name="bottom_bar">#FAFAFA</color>
     <color name="light_green">#8BC34A</color>
+    <color name="inactive">#8006B089</color>
 </resources>
