--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,134 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/default_color"
+    android:fitsSystemWindows="true"
     tools:context="com.app.studymanager.singup.SignupActivity">
 
-<RelativeLayout
-    android:id="@+id/activity_signup"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/activity_signup"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/books"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerCrop"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/topPanel"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:paddingTop="25dp"
-        android:paddingBottom="25dp"
-        android:layout_alignParentTop="true">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/logo"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/books" />
 
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/topPanel"
-        android:padding="20dp"
-        android:background="#E6FFFFFF">
-
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
+            android:id="@+id/topPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/email"
-            android:layout_marginTop="10dp">
+            android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:paddingBottom="25dp"
+            android:paddingTop="25dp">
 
-            <EditText
-                android:id="@+id/email_et"
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/enter_email"
-                android:inputType="textEmailAddress" />
+                android:layout_gravity="center"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/logo" />
 
-        </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/password"
-            android:layout_below="@+id/email"
-            android:layout_marginTop="10dp">
+            android:layout_height="match_parent"
+            android:layout_below="@+id/topPanel"
+            android:background="#E6FFFFFF"
+            android:paddingBottom="5dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="20dp">
 
-            <EditText
-                android:id="@+id/password_et"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/enter_passpword"
-                android:inputType="textPassword" />
+                android:layout_marginTop="10dp">
 
-        </android.support.design.widget.TextInputLayout>
+                <EditText
+                    android:id="@+id/email_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_email"
+                    android:inputType="textEmailAddress" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/email"
+                android:layout_marginTop="10dp">
+
+                <EditText
+                    android:id="@+id/password_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_passpword"
+                    android:inputType="textPassword" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/signup_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/green_btn_ripple"
+                    android:onClick="signup"
+                    android:text="@string/signup"
+                    android:textAllCaps="false"
+                    android:textColor="#FFFFFF"
+                    android:textSize="@dimen/text_xmedium" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/already_member"
+                        android:textSize="@dimen/text_xsmall" />
+
+                    <Button
+                        android:id="@+id/login_btn"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:onClick="login"
+                        android:text="@string/login_here"
+                        android:textAllCaps="false"
+                        android:textColor="@color/blue"
+                        android:textSize="@dimen/text_xsmall" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <ProgressBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:visibility="gone"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/signup_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="signup"
-                android:textSize="@dimen/text_xmedium"
-                android:textAllCaps="false"
-                android:background="@drawable/green_btn_ripple"
-                android:text="@string/signup"
-                android:textColor="#FFFFFF"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_xsmall"
-                    android:text="@string/already_member"/>
-                <Button
-                    android:id="@+id/login_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="login"
-                    android:textAllCaps="false"
-                    android:text="@string/login_here"
-                    android:textSize="@dimen/text_xsmall"
-                    android:textColor="@color/blue"
-                    style="?android:attr/borderlessButtonStyle"/>
-            </LinearLayout>
-
-        </LinearLayout>
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
     </RelativeLayout>
-
-</RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
