--- a/app/src/main/res/layout/fragment_subscribed_courses.xml
+++ b/app/src/main/res/layout/fragment_subscribed_courses.xml
@@ -1,81 +1,87 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/myScrollingContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="60dp"
-    android:scrollbars="none"
     tools:context="com.app.studymanager.subscribedcourses.SubscribedCoursesFragment"
     tools:ignore="MissingPrefix">
 
-    <FrameLayout
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/myScrollingContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
-        <LinearLayout
-            android:id="@+id/view_empty"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="30dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:layout_height="wrap_content">
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/view_empty"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineSpacingExtra="5dp"
-                android:text="@string/subscribed_empty"
-                android:textColor="@color/gray_dark"
-                android:textSize="@dimen/text_medium" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:padding="30dp"
+                android:visibility="gone">
 
-            <Button
-                android:id="@+id/browse_courses_btn"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="5dp"
+                    android:text="@string/subscribed_empty"
+                    android:textColor="@color/gray_dark"
+                    android:textSize="@dimen/text_medium" />
+
+                <Button
+                    android:id="@+id/browse_courses_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/green_border_btn"
+                    android:drawablePadding="20dp"
+                    android:onClick="browseCourses"
+                    android:text="@string/browse_courses"
+                    android:textColor="@drawable/green_btn_txt"
+                    android:textSize="@dimen/text_medium" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/view_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/green_border_btn"
-                android:drawablePadding="20dp"
-                android:onClick="browseCourses"
-                android:text="@string/browse_courses"
-                android:textColor="@drawable/green_btn_txt"
-                android:textSize="@dimen/text_medium" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
 
-        </LinearLayout>
+                <TextView
+                    fontPath="fonts/Asap-Bold.ttf"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/subscribed_courses"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/text_small" />
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="5dp" />
 
-        <LinearLayout
-            android:id="@+id/view_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical"
-            android:visibility="gone">
+            </LinearLayout>
 
-            <TextView
-                fontPath="fonts/Asap-Bold.ttf"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:text="@string/subscribed_courses"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/text_small" />
+        </FrameLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp" />
+    </android.support.v4.widget.NestedScrollView>
 
-        </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
-    </FrameLayout>
-
-</ScrollView>
+</RelativeLayout>
