--- a/app/src/main/res/layout/content_bottom_bar.xml
+++ b/app/src/main/res/layout/content_bottom_bar.xml
@@ -8,6 +8,7 @@
     android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.app.studymanager.bottombar.BottomBarActivity"
+    tools:ignore="MissingPrefix"
     tools:showIn="@layout/activity_bottom_bar">
 
     <LinearLayout
@@ -35,6 +36,7 @@
                 android:src="@drawable/home_img_selector"/>
 
             <TextView
+                fontPath="fonts/Asap-Regular.ttf"
                 android:id="@+id/home_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -61,6 +63,7 @@
                 android:src="@drawable/courses_img_selector" />
 
             <TextView
+                fontPath="fonts/Asap-Regular.ttf"
                 android:id="@+id/courses_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -87,6 +90,7 @@
                 android:src="@drawable/profile_img_selector" />
 
             <TextView
+                fontPath="fonts/Asap-Regular.ttf"
                 android:id="@+id/profile_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
