--- a/app/src/main/res/layout/content_custom_course.xml
+++ b/app/src/main/res/layout/content_custom_course.xml
@@ -20,7 +20,6 @@
             fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
             android:text="@string/course"
             android:textColor="@color/colorPrimaryDark"
@@ -41,27 +40,59 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/description"
+        <TextView
+            fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/start_date"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/text_small" />
 
-            <EditText
-                android:id="@+id/description_et"
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/descript"
-                android:inputType="text" />
+                android:layout_gravity="center"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/cal" />
 
-        </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/start_tv"
+                fontPath="fonts/Asap-Regular.ttf"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:lineSpacingExtra="3dp"
+                android:textColor="@color/default_tv_color"
+                android:textSize="@dimen/text_xsmall" />
+
+            <Button
+                android:id="@+id/change_btn"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="changeDate"
+                android:text="@string/change"
+                android:textAllCaps="false"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_xsmall" />
+
+        </LinearLayout>
 
         <TextView
             fontPath="fonts/Asap-Bold.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/books"
+            android:text="@string/add_book"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_small" />
@@ -93,21 +124,6 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/no_pages"
                 android:inputType="number" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/author"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp">
-
-            <EditText
-                android:id="@+id/author_et"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/author"
-                android:inputType="text" />
 
         </android.support.design.widget.TextInputLayout>
 
