--- a/app/src/main/res/layout/course_details_item.xml
+++ b/app/src/main/res/layout/course_details_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/book_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:contentDescription="@string/app_name"/>
 
     <TextView
