--- a/app/src/main/res/layout/course_update_item.xml
+++ b/app/src/main/res/layout/course_update_item.xml
@@ -42,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:textColor="@color/default_tv_color"
                 android:textSize="@dimen/text_xsmall" />
 
@@ -54,6 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="0.2"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:contentDescription="@string/app_name"/>
 
 </LinearLayout>
