--- a/app/src/main/res/layout/fragment_difficulty.xml
+++ b/app/src/main/res/layout/fragment_difficulty.xml
@@ -136,7 +136,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <EditText
@@ -218,9 +218,20 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/max_hours"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="@string/max_hours"
+            android:textColor="@android:color/holo_red_light"
+            android:visibility="gone"
+            android:textSize="@dimen/text_small" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginTop="10dp"
             android:background="@color/gray_light" />
 
         <TextView
@@ -243,8 +254,8 @@
                 android:id="@+id/radio_easy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
                 android:onClick="onRadioButtonClicked"
+                android:paddingLeft="5dp"
                 android:text="@string/easy"
                 android:textColor="@color/default_tv_color"
                 android:textSize="@dimen/text_xsmall" />
@@ -253,8 +264,8 @@
                 android:id="@+id/radio_moderate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
                 android:onClick="onRadioButtonClicked"
+                android:paddingLeft="5dp"
                 android:text="@string/moderate"
                 android:textColor="@color/default_tv_color"
                 android:textSize="@dimen/text_xsmall" />
@@ -263,8 +274,8 @@
                 android:id="@+id/radio_aggressive"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
                 android:onClick="onRadioButtonClicked"
+                android:paddingLeft="5dp"
                 android:text="@string/difficult"
                 android:textColor="@color/default_tv_color"
                 android:textSize="@dimen/text_xsmall" />
@@ -274,43 +285,6 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/gray_light" />
-
-        <TextView
-            fontPath="fonts/Asap-Bold.ttf"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/plan_date"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="@dimen/text_small" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/cal" />
-
-            <TextView
-                android:id="@+id/planned_date_tv"
-                fontPath="fonts/Asap-Regular.ttf"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:lineSpacingExtra="3dp"
-                android:textColor="@color/default_tv_color"
-                android:textSize="@dimen/text_xsmall" />
-
-        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
