--- a/app/src/main/res/layout/fragment_subscribed_courses.xml
+++ b/app/src/main/res/layout/fragment_subscribed_courses.xml
@@ -8,17 +8,19 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/myScrollingContent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true">
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
 
             <LinearLayout
                 android:id="@+id/view_empty"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:layout_gravity="center"
                 android:orientation="vertical"
                 android:padding="30dp"
